2004-02-27  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/internet/defer.py: Deprecated DeferredList.addDeferred.  It
	isn't as useful as it looks, and can have surprising behaviour.

2004-02-25  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/protocols/dns.py: Fixed a bug in TCP support: It
	wouldn't process any messages after the first, causing AXFR
	queries to be totally broken (in addition to other problems in the
	implementation of AXFR).

	* twisted/names/client.py: Fixed the AXFR client (lookupZone),
	thanks to DJB's wonderful documentation of the horribleness of
	DNS.

2004-02-25  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0 final! Same as rc3.

2004-02-24  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0rc3 (same as rc2, with cBanana bug
	fixed).

2004-02-19  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/application/service.py (IService.disownServiceParent)
	(IServiceCollection.removeService): These may return Deferred if they
	have asynchronous side effects.

2004-02-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0rc2. Brown-paper bag release bug.

2004-02-17  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0rc1.

2004-02-13  Brian Warner  <warner@lothar.com>

	* doc/howto/faq.xhtml: add entry on transport.getPeer()

2004-01-31  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.2alpha2 (problem with Debian packaging).

2004-01-30  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.2alpha1.

2004-01-23  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/scripts/trial.py: trial now supports a --coverage
	option, requiring Python 2.3.3. Give it a directory name (relative
	to _trial_temp) to put code-coverage info in. It uses the stdlib
	'trace' module.

2004-01-21  Pavel Pergamenshchik  <pp64@cornell.edu>
